# kaggle-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: git.mdc  python-kaggle.mdc
.github/workflows/: main.yaml
tests/: sample_test.py
