[project]
name = "kaggle-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pathlib>=1.0.1",
    "polars>=1.25.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pre-commit>=4.1.0", "pytest>=8.3.5", "ruff>=0.9.9"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "COM812", # missing docstring in magic method
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
